# app-starknet

./: .gitignore  Cargo.toml  README.md  bench.sh  build.rs  compilation.txt  ledger_app.toml  poseidon_error.txt  scripts.txt  test.apdu
.cargo/: config.toml
.github/workflows/: build.yml  guidelines_enforcer.yml  rust_fmt.yml
docker/: compile.txt
docs/: apdu.md  build.md  test.md
release/nanos/: app.hex  app_nanos.json
release/nanosplus/: app.hex  app_nanosplus.json
samples/apdu/: dpath_0.json  hash_pedersen_1.json  hash_pedersen_2.json  hash_pedersen_3.json  hash_pedersen_4.json  tx_deploy_account_v1.json  tx_deploy_account_v3.json  tx_ekubo_swap.json  tx_misc_0.json  tx_misc_1.json  tx_misc_2.json  tx_misc_3.json  tx_misc_4.json  tx_misc_multicalls.json  tx_misc_one_call_sumo.json  tx_transfer_ETH_0.json  tx_transfer_ETH_1.json  tx_transfer_ETH_2.json  tx_transfer_STRK_0.json  tx_v3_rpc0_8.json  tx_v3_rpc0_8_new.json
samples/dpath/: dpath_0.json
samples/hash/: hash_pedersen_0.json  hash_pedersen_1.json  hash_pedersen_2.json  hash_pedersen_3.json  hash_pedersen_4.json
samples/tx/: tx_deploy_account_v1.json  tx_deploy_account_v3.json  tx_ekubo_swap.json  tx_misc_0.json  tx_misc_1.json  tx_misc_2.json  tx_misc_3.json  tx_misc_4.json  tx_misc_5.json  tx_misc_multicalls.json  tx_misc_one_call_sumo.json  tx_transfer_ETH_0.json  tx_transfer_ETH_1.json  tx_transfer_ETH_2.json  tx_transfer_STRK_0.json  tx_v1_approve_and_remove.json  tx_v1_approve_and_swap.json  tx_v1_deploy_account.json  tx_v1_explore.json  tx_v1_l2.json  tx_v1_transfer_ETH_0.json  tx_v1_transfer_ETH_1.json  tx_v1_transfer_STRK_0.json  tx_v3_deploy_account.json  tx_v3_ekubo_swap.json  tx_v3_l1_data_gas_deploy_account.json  tx_v3_l1_data_gas_swap.json  tx_v3_l1_data_gas_transfer.json  tx_v3_mint.json  tx_v3_multicalls.json  tx_v3_no_l1_data_gas_transfer.json  tx_v3_one_sumo_call.json  tx_v3_rpc0_8.json  tx_v3_rpc0_8_new.json  tx_v3_transfer_ETH.json
speculos/: launch.txt  send_apdu.txt
src/: call.rs  context.rs  crypto.rs  crypto_helpers.rs  display.rs  main.rs  transaction.rs  types.rs  utils.rs
src/call/: plugin.rs
src/crypto/: pedersen.rs  poseidon.rs  poseidon2.rs  poseidonref.rs
starknet/: Cargo.toml
starknet/.cargo/: config.toml
starknet/src/: context.rs  crypto.rs  display.rs  erc20.rs  main.rs  settings.rs  transaction.rs  types.rs
starknet/src/crypto/: pedersen.rs  poseidon.rs
test/: pedersen.apdu  poseidon.apdu  poseidon_array.apdu  poseidon_array_opt.apdu  poseidon_hasher.apdu  poseidon_many.apdu  poseidon_single.apdu  poseidon_two.apdu  publickey.apdu  publickey_confirm.apdu  publickey_noconfirm.apdu  sign.apdu  sign_confirm.apdu  sign_multicall_tx.apdu  sign_noconfirm.apdu  sign_singlecall_tx.apdu  sign_tx.apdu  tx_random.apdu  version.apdu
tests/: README.md  conftest.py  requirements.txt  test_app_mainmenu.py  test_blind_sign_tx.py  test_blind_sign_tx_new.py  test_clear_sign_deploy.py  test_clear_sign_tx.py  test_error_cmd.py  test_pubkey_cmd.py  test_pubkey_cmd_single.py  test_sign_cmd.py  test_sign_hash.py  test_sign_tx.py  test_sign_tx_v1.py  test_version_cmd.py  usage.md  utils.py
tests/application_client/: command_sender.py  response_unpacker.py
tests/ledgercomm/: README.md  conftest.py  requirements.txt  test_error_cmd.py  test_sign_hash_cmd.py  test_starknet_sign.py  test_version_cmd.py
tests/ledgercomm/boilerplate_client/: boilerplate_cmd_builder.py  button.py  transaction.py
tests/ledgercomm/boilerplate_client/exception/: device_exception.py
tests_ledgercomm/ledgercomm/: requirements.txt  test_pubkey_cmd.py  test_sign_hash_cmd.py
tests_ledgercomm/ledgercomm/boilerplate_client/: boilerplate_cmd.py
tools/apdu-generator/: Cargo.toml  README.md  apdu.json
tools/apdu-generator/apdu_samples/: erc20_transfer.json  erc20_transfer_v1.json  get_pubkey.json  get_pubkey_confirm.json  hash_pedersen.json  hash_pedersen_61.json  hash_pedersen_62.json  hash_pedersen_63.json  random.json  random_v1.json  tx_multicalls_v1.json
tools/apdu-generator/input_samples/: transaction_erc20_transfer.json  transaction_random.json  two_felts.json
tools/apdu-generator/src/: apdu.rs  builder.rs  lib.rs  main.rs  types.rs
tools/apdu-generator/src/builder/: builder_internal.rs
tools/apdu-generator/tx_samples/: erc20_transfer.json  erc20_transfer_v1.json  hash_pedersen_61.json  hash_pedersen_62.json  hash_pedersen_63.json  misc.json  random.json  random_v1.json  starknetid_bmc.json  tx_multicalls_v1.json
tools/check-signature/: Cargo.toml
tools/check-signature/src/: main.rs
tools/tx-hash/: Cargo.toml
tools/tx-hash/src/: main.rs
