[package]
name = "starknet"
version = "1.0.0"
edition = "2021"
authors = ["Ledger"]

[dependencies]
ledger_device_sdk = "1.9.2"
include_gif = "1.1.0"
hex = { version = "0.4", default-features = false }

[features]
default = []
pending_review_screen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true

[package.metadata.ledger]
curve = ["secp256k1"]
path = ["2645'"]
name = "Starknet"
flags = "0"

[package.metadata.ledger.nanos]
icon = "crab.gif"

[package.metadata.ledger.nanox]
icon = "starknet_small.gif"

[package.metadata.ledger.nanosplus]
icon = "starknet_small.gif"

[package.metadata.ledger.stax]
icon = "starknet_32x32.gif"

[package.metadata.ledger.flex]
icon = "starknet_40x40.gif"

