[workspace]
members = [
    "starknet"
]

exclude = ["tools/apdu-generator", "tools/tx-hash", "tools/check-signature"]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true

[patch.crates-io]
ledger_device_sdk = { path = "../ledger-device-rust-sdk/ledger_device_sdk" }
ledger_secure_sdk_sys = { path = "../ledger-device-rust-sdk/ledger_secure_sdk_sys" }