[package]
name = "starknet"
version = "2.2.2"
edition = "2021"
authors = ["Ledger"]

[dependencies]
ledger_device_sdk = {version = "1.20.1"}
ledger_secure_sdk_sys = { version = "1.6.4", features = ["heap"]}
include_gif = "1.2.0"
hex = { version = "0.4", default-features = false, features = ["alloc"]}
num-bigint = { version = "0.4", default-features = false }

[features]
default = ["signhash"]
debug = ["signhash", "ledger_device_sdk/debug"]
poseidon = []
signhash = []

[package.metadata.ledger]
curve = ["secp256k1"]
path = ["2645'"]
name = "Starknet"
flags = "0"

[package.metadata.ledger.nanox]
icon = "starknet_small.gif"

[package.metadata.ledger.nanosplus]
icon = "starknet_small.gif"

[package.metadata.ledger.stax]
icon = "starknet_32x32.gif"

[package.metadata.ledger.flex]
icon = "starknet_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanox", "nanosplus"))'] }