[package]
name = "starknet"
version = "2.3.2"
edition = "2021"
authors = ["Ledger"]

[dependencies]
ledger_device_sdk = {version = "1.24.5"}
ledger_secure_sdk_sys = { version = "1.11.1", features = ["heap"]}
include_gif = "1.2.3"
hex = { version = "0.4", default-features = false, features = ["alloc"]}
num-bigint = { version = "0.4", default-features = false }

[features]
default = ["signhash"]
debug = ["signhash", "ledger_device_sdk/debug"]
poseidon = []
signhash = []

[package.metadata.ledger]
curve = ["secp256k1"]
path = ["2645'"]
name = "Starknet"
flags = "0"

[package.metadata.ledger.nanox]
icon = "starknet_small.gif"

[package.metadata.ledger.nanosplus]
icon = "starknet_small.gif"

[package.metadata.ledger.stax]
icon = "starknet_32x32.gif"

[package.metadata.ledger.flex]
icon = "starknet_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "starknet_32x32.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanox", "nanosplus"))'] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true
