[package]
name = "tx-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = "0.14.0"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.3.1"
starknet-types-core = "0.1.8"
clap = { version = "4.5.10", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0" 